--- a/gulp/livereload (html css)/index.html
+++ b/gulp/livereload (html css)/index.html
@@ -20,7 +20,7 @@
 		<nav>
 			<ul>
 				<li><a href="#">Home</a></li>
-				<li><a href="#">Contact</a></li>
+				<li><a href="#">Log</a></li>
 			</ul>
 		</nav>
 		<div class="main clearFix">
