--- a/gulp/watch+less+livereload(htmlcss)/index.html
+++ b/gulp/watch+less+livereload(htmlcss)/index.html
@@ -20,14 +20,17 @@
 		<nav>
 			<ul>
 				<li><a href="#">Home</a></li>
+				<li><a href="#">About</a></li>
 				<li><a href="#">Contact</a></li>
+				<li><a href="#">Articles</a></li>
+				<li><a href="#">Log</a></li>
 			</ul>
 		</nav>
 		<div class="main clearFix">
 			<aside>
 				<a href="#">Home</a><br/>
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, excepturi, explicabo, quos nihil repellendus quibusdam nobis dignissimos perferendis dolore placeat necessitatibus similique culpa laborum a doloribus accusantium aspernatur temporibus cum.<br/>
-				<a href="#">Contact</a><br/>
+				<a href="#">Articles</a><br/>
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, excepturi, explicabo, quos nihil repellendus quibusdam nobis dignissimos perferendis dolore placeat necessitatibus similique culpa laborum a doloribus accusantium aspernatur temporibus cum.<br/>
 				<a href="#">Log</a><br/>
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, excepturi, explicabo, quos nihil repellendus quibusdam nobis dignissimos perferendis dolore placeat necessitatibus similique culpa laborum a doloribus accusantium aspernatur temporibus cum.<br/>
