--- a/gulp/PLUGINS FOR GULP/autoprefix/index.html
+++ b/gulp/PLUGINS FOR GULP/autoprefix/index.html
@@ -9,9 +9,9 @@
 	<div id="wrapper">
 		<header>
 			<ul>
-				<li><a href="#">dasd</a></li>
-				<li><a href="#">das</a></li>
-				<li><a href="#">dadas</a></li>				
+				<li><a href="#">Home</a></li>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Contact</a></li>				
 			</ul>
 		</header>
 		<div class="slider">
@@ -19,20 +19,18 @@
 		</div>
 		<nav>
 			<ul>
-				<li><a href="#">dfs</a></li>
-				<li><a href="#">ewe</a></li>
-				<li><a href="#">weqe</a></li>
-				<li><a href="#">eweq</a></li>
-				<li><a href="#">fsfsd</a></li>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Contact</a></li>
 			</ul>
 		</nav>
 		<div class="main clearFix">
 			<aside>
-				<a href="#">dada</a><br/>
+				<a href="#">Home</a><br/>
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, excepturi, explicabo, quos nihil repellendus quibusdam nobis dignissimos perferendis dolore placeat necessitatibus similique culpa laborum a doloribus accusantium aspernatur temporibus cum.<br/>
-				<a href="#">dada</a><br/>
+				<a href="#">Contact</a><br/>
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, excepturi, explicabo, quos nihil repellendus quibusdam nobis dignissimos perferendis dolore placeat necessitatibus similique culpa laborum a doloribus accusantium aspernatur temporibus cum.<br/>
-				<a href="#">dada</a><br/>
+				<a href="#">Log</a><br/>
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, excepturi, explicabo, quos nihil repellendus quibusdam nobis dignissimos perferendis dolore placeat necessitatibus similique culpa laborum a doloribus accusantium aspernatur temporibus cum.<br/>
 			</aside>
 			<section>
